# lattice

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  STATUS.md
.github/workflows/: ci.yml
artemis-agent/: Cargo.toml
artemis-agent/src/: lib.rs  sandbox.rs  state.rs  tools.rs
artemis-cli/: Cargo.toml
artemis-cli/src/: config.rs  credentials.rs  main.rs  session.rs
artemis-cli/src/commands/: config_cmd.rs  debug.rs  doctor.rs  mod.rs  models.rs  new_agent.rs  print.rs  resolve.rs  run.rs  sessions.rs  stats.rs  validate.rs
artemis-core/: Cargo.toml  README.md
artemis-core/.github/workflows/: ci.yml
artemis-core/.sisyphus/notepads/artemis-rust-core/: learnings.md
artemis-core/.sisyphus/notepads/t19-openai-provider/: learnings.md
artemis-core/.sisyphus/notepads/t24/: learnings.md
artemis-core/.sisyphus/notepads/t27-auxiliary-client/: learnings.md
artemis-core/.sisyphus/notepads/t29-artemis-engine-pyclass/: learnings.md
artemis-core/benches/: benchmarks.rs
artemis-core/docs/: STATUS.md  architecture.md  auxiliary_client_decomposition.md  code-review-report.md  current-implementation-review.md  gstack-review.md  ideas.md  migration.md
artemis-core/docs/superpowers/plans/: 2026-04-29-kernel-separation.md
artemis-core/docs/superpowers/specs/: 2026-04-29-kernel-separation-design.md
artemis-core/examples/: agent_test.rs  basic_chat.py  chat_test.rs  concurrent.py  custom_model.py  dogfood.rs  minimax_debug.rs  minimax_test.rs  minimax_think.rs  model_fallback.py  opencode_test.rs  streaming.py  think_test.rs  tool_calling.py  tool_test.rs
artemis-core/src/: agent_loop.rs  engine.rs  errors.rs  lib.rs  logging.rs  mock.rs  provider.rs  retry.rs  router.rs  streaming.rs  streaming_bridge.rs  tokens.rs  tool_boundary.rs  types.rs
artemis-core/src/catalog/: data.json  loader.rs  mod.rs  types.rs
artemis-core/src/providers/: anthropic.rs  deepseek.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  xai.rs
artemis-core/src/transport/: anthropic.rs  chat_completions.rs  dispatcher.rs  gemini.rs  mod.rs  openai_compat.rs
artemis-core/tests/: e2e.rs  provider_integration.rs  transport_dispatcher_characterization.rs  transport_integration.rs
artemis-core/tests/e2e/: concurrent.rs  credential_resolution_characterization.rs  custom_model.rs  error_classification_characterization.rs  fallback.rs  interrupt.rs  model_flow.rs  regression_wave1.rs  regression_wave2.rs  regression_wave3.rs  regression_wave4_5.rs  state_machine_characterization.rs  unknown_model.rs
artemis-harness/: Cargo.toml
artemis-harness/examples/: pipeline_demo.rs
artemis-harness/src/: dispatch.rs  events.rs  handoff.rs  handoff_rule.rs  lib.rs  pipeline.rs  profile.rs  registry.rs  runner.rs  watcher.rs  ws.rs
artemis-memory/: Cargo.toml
artemis-memory/src/: lib.rs  reflect.rs  sqlite.rs
artemis-plugin/: Cargo.toml
artemis-plugin/src/: lib.rs
artemis-python/: Cargo.toml  pyproject.toml
artemis-python/src/: engine.rs  errors.rs  lib.rs
artemis-token-pool/: Cargo.toml
artemis-tui/: Cargo.toml
artemis-tui/src/: app.rs  event.rs  main.rs  theme.rs  ui.rs
artemis-tui/src/widgets/: message.rs  statusline.rs
docs/: AGENTS.md  README.md
docs/architecture/: crates.md  inference-pipeline.md  model-resolution.md  overview.md  security.md
docs/debug/: guide.md
docs/design/: competitors.md  ideas.md  llm-as-function.md  nix-paradigm.md  plugin-system.md  why.md
docs/development/: code-review.md  roadmap.md  setup.md  testing.md
docs/getting-started/: first-call.md  installation.md  quickstart.md
docs/issues/: README.md  VULN-001-sandbox-newline-bypass.md  VULN-002-sandbox-write-allowlist-substring-bypass.md  VULN-013-文件操作-toctou-竞态条件.md  (+33 more)
lattice-agent/: Cargo.toml
lattice-agent/src/: lib.rs  sandbox.rs  state.rs  tool_definitions.rs  tools.rs
lattice-agent/src/memory/: mod.rs  reflect.rs
lattice-agent/tests/: agent_mock.rs
lattice-bus/: Cargo.toml
lattice-bus/src/: lib.rs
lattice-cli/: Cargo.toml
lattice-core/: Cargo.toml
lattice-core/benches/: benchmarks.rs
lattice-core/docs/: STATUS.md  architecture.md  code-review-report.md  current-implementation-review.md  gstack-review.md
lattice-core/docs/superpowers/plans/: 2026-04-29-kernel-separation.md
lattice-core/docs/superpowers/specs/: 2026-04-29-kernel-separation-design.md
lattice-core/examples/: agent_test.rs  chat_test.rs  dogfood.rs
lattice-core/src/: errors.rs  lib.rs  logging.rs  provider.rs  retry.rs  router.rs  streaming.rs  tokens.rs  types.rs
lattice-core/src/catalog/: loader.rs  types.rs
lattice-core/src/transport/: anthropic.rs  chat_completions.rs  dispatcher.rs  gemini.rs  mod.rs  openai_compat.rs
lattice-core/tests/: e2e.rs  transport_dispatcher_characterization.rs  transport_integration.rs
lattice-core/tests/e2e/: chat_mock.rs  credential_resolution_characterization.rs  error_classification_characterization.rs  regression_wave1.rs  regression_wave4_5.rs  unknown_model.rs
lattice-harness/: Cargo.toml
lattice-harness/examples/: pipeline_demo.rs
lattice-harness/src/: dag_runner.rs  dispatch.rs  events.rs  handoff_rule.rs  lattice_dir.rs  lib.rs  micro_agent.rs  pipeline.rs  profile.rs  registry.rs  runner.rs  tools.rs  watcher.rs  ws.rs
lattice-harness/src/memory/: mod.rs  sqlite.rs
lattice-harness/tests/: plugin_dag_integration.rs
lattice-memory/: Cargo.toml
lattice-memory/src/: lib.rs  reflect.rs  sqlite.rs
lattice-plugin/: Cargo.toml
lattice-plugin/src/: bundle.rs  erased.rs  erased_runner.rs  lib.rs  registry.rs
lattice-plugin/src/builtin/: code_review.rs  deep_research.rs  doc_gen.rs  image_gen.rs  knowledge_base.rs  mod.rs  parse_utils.rs  pptx_gen.rs  refactor.rs  security_audit.rs  test_gen.rs
lattice-python/: Cargo.toml  pyproject.toml
lattice-python/src/: engine.rs  errors.rs  lib.rs
lattice-token-pool/: Cargo.toml
lattice-tui/: Cargo.toml
lattice-tui/src/: app.rs  event.rs  main.rs  theme.rs  ui.rs
lattice-tui/src/widgets/: message.rs  mod.rs  statusline.rs
scripts/: generate_catalog.py
(+47 files in other folders)
