[package]
name = "artemis-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-memory = { path = "../artemis-memory" }
artemis-token-pool = { path = "../artemis-token-pool" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
artemis-plugin = { path = "../artemis-plugin" }
