[package]
name = "artemis-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artemis"
path = "src/main.rs"

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-agent = { path = "../artemis-agent" }
artemis-memory = { path = "../artemis-memory" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
colored = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
futures = "0.3"
chrono = "0.4"
dotenvy = "0.15"
