[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "artemis_core"

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
async-trait = "0.1"
thiserror = "2"
reqwest-eventsource = "0.6"
futures = "0.3"
rig-core = "0.35"
tiktoken-rs = "0.11"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
