[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "artemis_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"] }
async-trait = "0.1"
thiserror = "2"
reqwest-eventsource = "0.6"
futures = "0.3"
tiktoken-rs = "0.11"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"
rand = "0.8"

[dev-dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
