[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "artemis_core"
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"] }
thiserror = "2"
reqwest-eventsource = "0.6"
futures = "0.3"
tiktoken-rs = "0.11"
regex = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "chat_test"

[[example]]
name = "think_test"

[[example]]
name = "minimax_test"

[[example]]
name = "minimax_think"

[[example]]
name = "opencode_test"

[[example]]
name = "minimax_debug"

