[package]
name = "artemis-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-agent = { path = "../artemis-agent" }
artemis-memory = { path = "../artemis-memory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
