[package]
name = "artemis-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "artemis_core"
crate-type = ["cdylib"]

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-agent = { path = "../artemis-agent" }
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
