[package]
name = "artemis-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artemis-tui"
path = "src/main.rs"

[dependencies]
artemis-core = { path = "../artemis-core" }
artemis-agent = { path = "../artemis-agent" }
artemis-memory = { path = "../artemis-memory" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = "0.4"
