[package]
name = "lattice-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-memory = { path = "../lattice-memory" }
lattice-token-pool = { path = "../lattice-token-pool" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lattice-plugin = { path = "../lattice-plugin" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
