[package]
name = "lattice-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-agent = { path = "../lattice-agent" }
lattice-memory = { path = "../lattice-memory" }
lattice-bus = { path = "../lattice-bus" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures = "0.3"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
axum = { version = "0.8", features = ["ws"], optional = true }
tracing = "0.1"
jsonschema = "0.26"

[dev-dependencies]
dotenvy = "0.15"
tempfile = "3"

[[example]]
name = "pipeline_demo"
path = "examples/pipeline_demo.rs"
