[package]
name = "lattice-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-memory = { path = "../lattice-memory" }
lattice-token-pool = { path = "../lattice-token-pool" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
