[package]
name = "lattice-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-agent = { path = "../lattice-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }