[package]
name = "lattice-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lattice-tui"
path = "src/main.rs"

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-agent = { path = "../lattice-agent" }
lattice-memory = { path = "../lattice-memory" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = "0.4"
futures = "0.3"
